--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "parcel src/index.html",
-    "i18n": "static-i18n -i ./src -o ./build -l en ru ge",
-    "build": "npm run i18n && parcel build build/**/*.html"
+    "i18n": "static-i18n -l ru -i en -i ka -i ru ./src -d ./",
+    "build": "npm run i18n && parcel build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Georgia Like Auto website",
   "devDependencies": {
     "parcel": "^2.14.4",
-    "static-i18n": "^0.2.10",
+    "static-i18n": "^0.2.1",
     "svgo": "^3.3.2"
   }
 }
