--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "parcel src/index.html",
-    "i18n": "static-i18n -l ru -i en -i ka -i ru ./src -d ./",
+    "i18n": "static-i18n -l ru -i en -i ka -i ru ./src -d ./ --allow-html",
     "build": "npm run i18n && parcel build"
   },
   "keywords": [],
