--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "parcel src/index.html",
     "i18n": "static-i18n -l ru -i en -i ka -i ru ./src -d ./ --allow-html",
-    "build": "npm run i18n && parcel build"
+    "build": "parcel build ./i18n/**/src/*",
+    "build-test": "npm run i18n && parcel build"
   },
   "keywords": [],
   "author": "",
