--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "prebuild": "npm run i18n",
     "dev": "parcel src/index.html",
-    "i18n": "static-i18n -l en -i en -l ru -i ru -l ka -i ka src --allow-html",
+    "i18n": "rimraf temp && mkdir temp && mkdir temp\\locales && copy src\\index.html temp\\ && copy src\\locales\\* temp\\locales\\ && static-i18n -l en -i en -l ru -i ru -l ka -i ka temp --allow-html && rimraf temp",
     "build": "parcel build i18n/en/index.html i18n/ru/index.html i18n/ka/index.html --dist-dir dist --public-url ./"
   },
   "keywords": [],
@@ -12,7 +12,9 @@
   "license": "ISC",
   "description": "Georgia Like Auto website",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "parcel": "^2.14.4",
+    "rimraf": "^6.0.1",
     "static-i18n": "^0.2.1",
     "svgo": "^3.3.2"
   }
