Добавил отладочные команды и тестирование SSH-соединения в скрипт развертывания для улучшения процесса деплоя. Это позволяет убедиться в корректности подключения перед началом развертывания.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,15 @@ jobs:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
+        key_path: /tmp/deploy_key
+        script_stop: true
+        debug: true
         script: |
+          echo "Testing SSH connection..."
+          whoami
+          pwd
+          ls -la
+          echo "Starting deployment..."
           cd /home/botuser/sto-batumi
           git pull origin master
           npm install
