Добавил поддержку загрузки изображений в админ-панели с использованием multer. Обновил маршруты для добавления и редактирования акций, чтобы принимать файлы изображений (SVG и PNG). Настроил конфигурацию Nginx для обслуживания загруженных изображений. Обновил зависимости в package.json и package-lock.json для поддержки multer.

--- a/backend/nginx_promo_config.conf
+++ b/backend/nginx_promo_config.conf
@@ -56,6 +56,14 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme; # Important for Node.js to know it's HTTPS
     }
 
+    # Serve uploaded images directly from Nginx
+    location /uploads/ {
+        alias /path/to/your/backend/public/uploads/; # <--- CHANGE THIS TO THE ACTUAL ABSOLUTE PATH
+        expires 30d;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
     # Optional: If your Node.js app serves images from its public folder
     # location /images/ {
     #     proxy_pass http://localhost:3000;
